--- a/Jupyter/Pandas Test.ipynb
+++ b/Jupyter/Pandas Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = sqlite3.connect(\"data/portal_mammals.sqlite\")\n",
+    "con = sqlite3.connect(\"../code/omnet/simulations/results/simulate.vec\")\n",
     "\n",
-    "# Load the data into a DataFrame\n",
-    "surveys_df = pd.read_sql_query(\"SELECT * from surveys\", con)\n",
+    "df=pd.read_sql_query(\"\"\"\n",
+    "SELECT AVG(v.vectorMax / 3600) as meanThroughput\n",
+    "FROM vector v NATURAL JOIN runAttr ra\n",
+    "WHERE v.moduleName = \"Network.server.processor\" AND\n",
+    "\t\tv.vectorName = \"completedTransactions:vector\" AND \n",
+    "\t\tra.attrName = \"measurement\"\n",
+    "GROUP BY ra.attrValue\n",
+    "ORDER BY v.runId;\n",
+    "\"\"\", con)\n",
     "\n",
-    "# Select only data for 2002\n",
-    "surveys2002 = surveys_df[surveys_df.year == 2002]\n",
-    "\n",
-    "# Write the new DataFrame to a new SQLite table\n",
-    "surveys2002.to_sql(\"surveys2002\", con, if_exists=\"replace\")\n",
+    "df.head()\n",
     "\n",
     "con.close()"
    ]
