Simulate in results

--- a/Jupyter/Confidence Interval Analysis.ipynb
+++ b/Jupyter/Confidence Interval Analysis.ipynb
@@ -11,7 +11,8 @@
     "import sqlite3\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as mtick\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scipy.stats as stats\n"
    ]
   },
   {
