--- a/Jupyter/Confidence Interval Analysis.ipynb
+++ b/Jupyter/Confidence Interval Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,194 +17,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Unnamed: 0            I             A           B          C         AB  \\\n",
-      "0            NaN            1             1    1.000000          1   1.000000   \n",
-      "1            NaN            1             1   -1.000000         -1  -1.000000   \n",
-      "2            NaN            1             1    1.000000         -1   1.000000   \n",
-      "3            NaN            1             1   -1.000000          1  -1.000000   \n",
-      "4            NaN            1            -1    1.000000          1  -1.000000   \n",
-      "5            NaN            1            -1   -1.000000         -1   1.000000   \n",
-      "6            NaN            1            -1    1.000000         -1  -1.000000   \n",
-      "7            NaN            1            -1   -1.000000          1   1.000000   \n",
-      "8            sum      19.6691       6.68689   11.492222    11.4443   6.676000   \n",
-      "9             qi      2.45864      0.835861    1.436528    1.43054   0.834500   \n",
-      "10  8*qi^2 (Ssx)          NaN       55.8931  165.088965    163.716  55.711220   \n",
-      "11     variation          NaN     0.0782031    0.230985   0.229064   0.077949   \n",
-      "12           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "13           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "14           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "15           SST      714.717           NaN         NaN        NaN        NaN   \n",
-      "16           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "17           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "18           NaN          NaN           NaN         NaN  SOMMAPROB   1.000000   \n",
-      "19           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "20           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "21           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "22           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "23           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "24           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "25           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "26           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "27           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "28           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "29           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "30           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "31           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "32           NaN            A     Processor         NaN        NaN        NaN   \n",
-      "33           NaN            B          Disk         NaN        NaN        NaN   \n",
-      "34           NaN            C  RemoteServer         NaN        NaN        NaN   \n",
-      "35           NaN  ServiceTime           NaN         NaN        NaN        NaN   \n",
-      "36           NaN         High            -1         NaN        NaN        NaN   \n",
-      "37           NaN          Low             1         NaN        NaN        NaN   \n",
-      "38           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "39           NaN          NaN           NaN         NaN        NaN        NaN   \n",
-      "40           NaN          NaN           NaN         NaN        NaN        NaN   \n",
+      "Empty DataFrame\n",
+      "Columns: [Unnamed: 0, I, A, B, C, AB, AC, BC, ABC, y1, y2, y3, y4, y5, y6, y7, y8, y9, y10, yMean, y1-ym, y2-ym, y3-ym, y4-ym, y5-ym, y6-ym, y7-ym, y8-ym, y9-ym, y10-ym, Unnamed: 30]\n",
+      "Index: []\n",
       "\n",
-      "           AC          BC        ABC         y1  ...     y2-ym     y3-ym  \\\n",
-      "0    1.000000    1.000000   1.000000  10.015833  ... -0.025139  0.027083   \n",
-      "1   -1.000000    1.000000   1.000000   1.028889  ... -0.008472  0.013472   \n",
-      "2   -1.000000   -1.000000  -1.000000   1.092222  ... -0.016194  0.031583   \n",
-      "3    1.000000   -1.000000  -1.000000   1.068333  ...  0.004583 -0.031806   \n",
-      "4   -1.000000    1.000000  -1.000000   3.410833  ... -0.040167  0.022889   \n",
-      "5    1.000000    1.000000  -1.000000   1.048889  ... -0.001056  0.005611   \n",
-      "6    1.000000   -1.000000   1.000000   1.084722  ... -0.008611  0.028056   \n",
-      "7   -1.000000   -1.000000   1.000000   1.020556  ...  0.030389  0.012889   \n",
-      "8    6.691889   11.407778   6.666222        NaN  ... -0.064667  0.109778   \n",
-      "9    0.836486    1.425972   0.833278        NaN  ... -0.008083  0.013722   \n",
-      "10  55.976721  162.671742  55.548148        NaN  ...  0.003599  0.004433   \n",
-      "11   0.078320    0.227603   0.077720        NaN  ...       NaN       NaN   \n",
-      "12        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "13        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "14        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "15        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "16        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "17        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "18        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "19        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "20        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "21        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "22        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "23        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "24        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "25        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "26        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "27        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "28        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "29        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "30        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "31        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "32        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "33        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "34        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "35        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "36        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "37        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "38        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "39        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "40        NaN         NaN        NaN        NaN  ...       NaN       NaN   \n",
-      "\n",
-      "       y4-ym     y5-ym     y6-ym     y7-ym     y8-ym     y9-ym    y10-ym  \\\n",
-      "0  -0.028472  0.135139  0.036250 -0.188750  0.025972  0.076250  0.017639   \n",
-      "1  -0.020417 -0.056250 -0.010694  0.024306  0.010972 -0.014306  0.048194   \n",
-      "2  -0.012028 -0.045917  0.000750  0.006861  0.018806 -0.027583 -0.009250   \n",
-      "3   0.050694  0.020417 -0.023750 -0.003194 -0.013472 -0.041528  0.000972   \n",
-      "4   0.009556  0.044556 -0.040444 -0.010722  0.002333  0.021778 -0.009056   \n",
-      "5  -0.024389 -0.013000  0.017833  0.008389 -0.017167 -0.007167  0.001444   \n",
-      "6  -0.002500 -0.039444  0.005000  0.003333  0.014167 -0.040000 -0.006667   \n",
-      "7  -0.000167  0.001222 -0.031000 -0.027389  0.002889  0.001500  0.011222   \n",
-      "8  -0.027722  0.046722 -0.046056 -0.187167  0.044500 -0.031056  0.054500   \n",
-      "9  -0.003465  0.005840 -0.005757 -0.023396  0.005563 -0.003882  0.006812   \n",
-      "10  0.004635  0.027663  0.004933  0.037221  0.001839  0.010632  0.002975   \n",
-      "11       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "12       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "13       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "14       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "15       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "16       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "17       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "18       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "19       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "20       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "21       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "22       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "23       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "24       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "25       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "26       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "27       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "28       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "29       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "30       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "31       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "32       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "33       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "34       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "35       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "36       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "37       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "38       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "39       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "40       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-      "\n",
-      "    Unnamed: 30  \n",
-      "0           NaN  \n",
-      "1           NaN  \n",
-      "2           NaN  \n",
-      "3           NaN  \n",
-      "4           NaN  \n",
-      "5           NaN  \n",
-      "6           NaN  \n",
-      "7           NaN  \n",
-      "8           sum  \n",
-      "9            qi  \n",
-      "10          SSE  \n",
-      "11          NaN  \n",
-      "12          NaN  \n",
-      "13          NaN  \n",
-      "14          NaN  \n",
-      "15          NaN  \n",
-      "16          NaN  \n",
-      "17          NaN  \n",
-      "18          NaN  \n",
-      "19          NaN  \n",
-      "20          NaN  \n",
-      "21          NaN  \n",
-      "22          NaN  \n",
-      "23          NaN  \n",
-      "24          NaN  \n",
-      "25          NaN  \n",
-      "26          NaN  \n",
-      "27          NaN  \n",
-      "28          NaN  \n",
-      "29          NaN  \n",
-      "30          NaN  \n",
-      "31          NaN  \n",
-      "32          NaN  \n",
-      "33          NaN  \n",
-      "34          NaN  \n",
-      "35          NaN  \n",
-      "36          NaN  \n",
-      "37          NaN  \n",
-      "38          NaN  \n",
-      "39          NaN  \n",
-      "40          NaN  \n",
-      "\n",
-      "[41 rows x 31 columns]\n"
+      "[0 rows x 31 columns]\n"
      ]
     }
    ],
    "source": [
-    "excel2krSheet=pd.read_excel(\"../excel/2kr.xlsx\")\n",
+    "excelSheet=pd.read_excel(\"../excel/2kr.xlsx\")\n",
     "\n",
-    "print(excel2krSheet)\n",
-    "\n"
+    "app=excelSheet.loc['y1-ym':'y10-ym']\n",
+    "\n",
+    "print(app)\n"
    ]
   },
   {
