--- a/Jupyter/QQPlot Final.ipynb
+++ b/Jupyter/QQPlot Final.ipynb
@@ -10,7 +10,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy import stats "
+    "from scipy import stats \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -151,6 +153,13 @@
     "\n",
     "#Rapid check the new dataframe\n",
     "residualDataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing Normal Distribution"
    ]
   },
   {
