--- a/Jupyter/2kr Tests.ipynb
+++ b/Jupyter/2kr Tests.ipynb
@@ -322,7 +322,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Response Time"
+    "## Response Time\n",
+    "\n",
+    "We will not use response time in 2kr analysis since the hypothesis are not completely verified."
    ]
   },
   {
@@ -610,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
